// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hero stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative w-full overflow-hidden h-[100vh] md:h-[85vh]"
    data-hero-id="_r_0_"
  >
    <img
      alt="Hero background"
      class="absolute inset-0 w-full h-full object-cover"
      fetchpriority="high"
      src="/images/hero-01.webp"
      style="object-position: 50% 50%;"
      title="Welcome banner"
    />
    <div
      class="absolute inset-0 z-10 flex items-center"
    >
      <div
        class="container mx-auto w-full section-container"
      >
        <div
          class="max-w-2xl mx-auto text-center"
        >
          <h1
            class="text-6xl font-bold leading-none [letter-spacing:-1.5px] mb-3 sm:mb-4 md:mb-6 text-primary-foreground"
          >
            Welcome to Our Store
          </h1>
          <p
            class="text-lg font-normal leading-[120%] mb-4 sm:mb-6 md:mb-8 text-primary-foreground"
          >
            Discover amazing products for your everyday needs
          </p>
          <div
            class="flex justify-center"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground p-3 sm:p-4 md:p-5 lg:p-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/all"
            >
              Shop Now
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero stories snapshot > PageDesignerStyling story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative w-full overflow-hidden h-[100vh] md:h-[85vh]"
    data-hero-id="_r_3_"
  >
    <img
      alt="Hero background"
      class="absolute inset-0 w-full h-full object-cover"
      fetchpriority="high"
      src="/images/hero-04.webp"
      style="object-position: 50% 50%;"
    />
    <div
      class="absolute inset-0 z-10 flex items-center"
    >
      <div
        class="container mx-auto w-full section-container"
      >
        <div
          class="max-w-2xl mx-auto text-center"
        >
          <h1
            class="text-3xl font-semibold tracking-tight mb-3 sm:mb-4 md:mb-6"
            style="color: rgb(248, 250, 252);"
          >
            Styled headline
          </h1>
          <p
            class="text-base font-normal leading-7 mb-4 sm:mb-6 md:mb-8"
            style="color: rgb(226, 232, 240);"
          >
            Subtitle with custom color and paragraph scale
          </p>
          <div
            class="flex justify-center"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground h-9 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground p-3 sm:p-4 md:p-5 lg:p-6"
              data-size="default"
              data-slot="button"
              data-variant="outline"
              href="/category/all"
            >
              Shop
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero stories snapshot > RightBlockCenteredText story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative w-full overflow-hidden h-[100vh] md:h-[85vh]"
    data-hero-id="_r_6_"
  >
    <img
      alt="Hero background"
      class="absolute inset-0 w-full h-full object-cover"
      fetchpriority="high"
      src="/images/hero-03.webp"
      style="object-position: 50% 50%;"
    />
    <div
      class="absolute inset-0 z-10 flex items-center"
    >
      <div
        class="container mx-auto w-full section-container"
      >
        <div
          class="max-w-2xl ml-auto text-center"
        >
          <h1
            class="text-6xl font-bold leading-none [letter-spacing:-1.5px] mb-3 sm:mb-4 md:mb-6 text-primary-foreground"
          >
            Right-aligned column
          </h1>
          <p
            class="text-lg font-normal leading-[120%] mb-4 sm:mb-6 md:mb-8 text-primary-foreground"
          >
            Text stays centered inside the content block
          </p>
          <div
            class="flex justify-center"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground p-3 sm:p-4 md:p-5 lg:p-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/all"
            >
              Shop Now
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero stories snapshot > StyleOverrideRoundedCornersAndCTAZoom story renders and matches snapshot 1`] = `
<div>
  <style>
    [data-hero-id="_r_4_"] { & { border-radius: 1.5rem; overflow: hidden; }
& [data-slot="button"] { transition: transform 0.2s ease; }
& [data-slot="button"]:hover { transform: scale(1.08); } }
  </style>
  <div
    class="relative w-full overflow-hidden h-[100vh] md:h-[85vh]"
    data-hero-id="_r_4_"
  >
    <img
      alt="Hero background"
      class="absolute inset-0 w-full h-full object-cover"
      fetchpriority="high"
      src="/images/hero-02.webp"
      style="object-position: 50% 50%;"
    />
    <div
      class="absolute inset-0 z-10 flex items-center"
    >
      <div
        class="container mx-auto w-full section-container"
      >
        <div
          class="max-w-2xl mx-auto text-center"
        >
          <h1
            class="text-6xl font-bold leading-none [letter-spacing:-1.5px] mb-3 sm:mb-4 md:mb-6 text-primary-foreground"
          >
            Brand Experience Override
          </h1>
          <p
            class="text-lg font-normal leading-[120%] mb-4 sm:mb-6 md:mb-8 text-primary-foreground"
          >
            Rounded corners on the root element, zoom on CTA hover — both driven by a CSS fragment in styleOverride
          </p>
          <div
            class="flex justify-center"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground p-3 sm:p-4 md:p-5 lg:p-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/all"
            >
              Shop Now
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero stories snapshot > StyleOverrideWithDesignTokens story renders and matches snapshot 1`] = `
<div>
  <style>
    [data-hero-id="_r_5_"] { & { outline: 3px solid var(--primary-foreground); outline-offset: -12px; }
& [data-slot="button"] { background-color: transparent; color: var(--primary-foreground); border: 2px solid var(--primary-foreground); }
& [data-slot="button"]:hover { background-color: var(--primary-foreground); color: var(--primary); transform: scale(1.03); } }
  </style>
  <div
    class="relative w-full overflow-hidden h-[100vh] md:h-[85vh]"
    data-hero-id="_r_5_"
  >
    <img
      alt="Hero background"
      class="absolute inset-0 w-full h-full object-cover"
      fetchpriority="high"
      src="/images/hero-04.webp"
      style="object-position: 50% 50%;"
    />
    <div
      class="absolute inset-0 z-10 flex items-center"
    >
      <div
        class="container mx-auto w-full section-container"
      >
        <div
          class="max-w-2xl mx-auto text-center"
        >
          <h1
            class="text-6xl font-bold leading-none [letter-spacing:-1.5px] mb-3 sm:mb-4 md:mb-6"
            style="color: rgb(248, 250, 252);"
          >
            Design Token Override
          </h1>
          <p
            class="text-lg font-normal leading-[120%] mb-4 sm:mb-6 md:mb-8"
            style="color: rgb(226, 232, 240);"
          >
            Ghost button using var(--primary-foreground) — inverts to solid on hover using var(--primary). White inset frame via var(--ring).
          </p>
          <div
            class="flex justify-center"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground p-3 sm:p-4 md:p-5 lg:p-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/all"
            >
              Shop Now
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero stories snapshot > WithImageTitle story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative w-full overflow-hidden h-[100vh] md:h-[85vh]"
    data-hero-id="_r_1_"
  >
    <img
      alt="Featured collection background"
      class="absolute inset-0 w-full h-full object-cover"
      fetchpriority="high"
      src="/images/hero-02.webp"
      style="object-position: 50% 50%;"
      title="Spring 2026 Collection"
    />
    <div
      class="absolute inset-0 z-10 flex items-center"
    >
      <div
        class="container mx-auto w-full section-container"
      >
        <div
          class="max-w-2xl mx-auto text-center"
        >
          <h1
            class="text-6xl font-bold leading-none [letter-spacing:-1.5px] mb-3 sm:mb-4 md:mb-6 text-primary-foreground"
          >
            Featured Collection
          </h1>
          <p
            class="text-lg font-normal leading-[120%] mb-4 sm:mb-6 md:mb-8 text-primary-foreground"
          >
            Hover over the image to see the tooltip
          </p>
          <div
            class="flex justify-center"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground p-3 sm:p-4 md:p-5 lg:p-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/featured"
            >
              View Collection
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero stories snapshot > WithoutSubtitle story renders and matches snapshot 1`] = `
<div>
  <div
    class="relative w-full overflow-hidden h-[100vh] md:h-[85vh]"
    data-hero-id="_r_2_"
  >
    <img
      alt="Hero background"
      class="absolute inset-0 w-full h-full object-cover"
      fetchpriority="high"
      src="/images/hero-03.webp"
      style="object-position: 50% 50%;"
    />
    <div
      class="absolute inset-0 z-10 flex items-center"
    >
      <div
        class="container mx-auto w-full section-container"
      >
        <div
          class="max-w-2xl mx-auto text-center"
        >
          <h1
            class="text-6xl font-bold leading-none [letter-spacing:-1.5px] mb-3 sm:mb-4 md:mb-6 text-primary-foreground"
          >
            Simple Hero
          </h1>
          <div
            class="flex justify-center"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground p-3 sm:p-4 md:p-5 lg:p-6"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/explore"
            >
              Explore
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
